--- a/index.html
+++ b/index.html
@@ -564,6 +564,11 @@
         </div>
     </section>
 
+
+        <button id="sound-toggle" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+        🔇 Ativar Som
+    </button>
+
         <!-- MÚSICA DE FUNDO - VERSÃO SIMPLES E FUNCIONAL -->
     <audio id="musicaFundo" loop style="display: none;">
         <source src="musicas/musica1.mp3" type="audio/mpeg">
