--- a/index.html
+++ b/index.html
@@ -564,10 +564,34 @@
         </div>
     </section>
 
+        <!-- Sistema de Áudio para Celular -->
+    <audio id="musicaMobile" loop preload="auto" style="display: none;">
+        <source src="musica1.mp3" type="audio/mpeg">
+    </audio>
 
-        <button id="sound-toggle" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
-        🔇 Ativar Som
-    </button>
+    <!-- Botão de Música Fixo para Celular -->
+    <div id="mobileMusicBtn" style="display: none;">
+        <button onclick="iniciarMusicaMobile()" style="
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 9999;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background: linear-gradient(45deg, #ff6b6b, #ff9a76);
+            border: none;
+            color: white;
+            font-size: 1.5em;
+            cursor: pointer;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        ">
+            <i class="fas fa-play"></i>
+        </button>
+    </div>
 
         <!-- MÚSICA DE FUNDO - VERSÃO SIMPLES E FUNCIONAL -->
     <audio id="musicaFundo" loop style="display: none;">
